--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <div class='container'>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  
   <h1>
     <div class='i' id='logo'>Dogsite</div>
     <div class='i' id='status'>twitter@dogdogdog</div>
