replaced status area for social
Social div now displays icons for various social sites. In the future
these should be links that point to corresponding accounts.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,300' rel='stylesheet' type='text/css'>
+    
   <h1>
     <div class='i' id='logo'>Dagspace</div>
-    <div class='i' id='status'>twitter@dogdogdog</div>
+    <div id="socials">
+      <div class = "fontawesome-twitter"></div>
+      <div class = "fontawesome-facebook-sign"></div>
+      <div class = "fontawesome-google-plus-sign"></div>
+      
+    </div>
   </h1>
   </head>
   <div id='main'>
